//
// Protocol buffers definition
//
syntax = "proto3";
package pt.ulisboa.tecnico.sirs.backoffice.grpc;

option java_multiple_files = true;

service BackofficeWebserverService {
  rpc getCompartmentKeys(getCompartmentKeysRequest) returns (getCompartmentKeysResponse);
}

message getCompartmentKeysRequest {

}

message getCompartmentKeysResponse {
  bytes personalInfoKey = 1;
  bytes energyPanelKey = 2;
}