//
// Protocol buffers definition
//
syntax = "proto3";
package pt.ulisboa.tecnico.sirs.rbac.grpc;

option java_multiple_files = true;

service RbacService {
	rpc validatePermissions(ValidatePermissionRequest) returns (ValidatePermissionResponse);
	rpc getCompartmentKey(GetCompartmentKeyRequest) returns (GetCompartmentKeyResponse);
}

enum Role {
	ACCOUNT_MANAGER = 0;
	ENERGY_MANAGER = 1;
}

enum PermissionType {
	ENERGY_DATA = 0;
	PERSONAL_DATA = 1;
}

message ValidatePermissionRequest {
	Role role = 1;
	PermissionType permission = 2;
}

message ValidatePermissionResponse {
	bool ack = 1;
}

enum Compartment {
	PERSONAL_INFO = 0;
	ENERGY_PANEL = 1;
}
  
message GetCompartmentKeyRequest {
	message RequestData {
		Compartment compartment = 1;
		bytes certificate = 2;
	}
	RequestData data = 1;
	bytes signature = 2;
}
  
message GetCompartmentKeyResponse {
	bytes key = 1;
}